# Dev-App-uv-sphinx

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tasks.py
.github/: CONTRIBUTING.md
.github/workflows/: build_tests.yml
api/: main.py
api/models/: models.py
api/modules/: modules.py  my_maths.py
docs/source/: api.rst  conf.py  index.rst  models.rst  modules.rst
public/: .buildinfo  .buildinfo.bak  api.html  api2.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/.doctrees/: api.doctree  api2.doctree  environment.pickle  index.doctree
public/_modules/: index.html
public/_modules/models/: models.html
public/_modules/modules/: modules.html  my_maths.html
public/_sources/: api.rst.txt  index.rst.txt
test/: test_valid.py
tests/: my_pytests.py
tuto/: tuto.md
