[project]
name = "dev-app-uv-sphinx"
version = "0.1.0"
description = "API de formation UV et Sphinx"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

# On utilise les dependency-groups (standard uv) pour le développement
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.0",
]

